fix: spacing between code blocks and comment components (#102)

--- a/src/assets/colors/white.css
+++ b/src/assets/colors/white.css
@@ -18,6 +18,7 @@
   --color-highlight-background: #212326;
   --color-card-hover: #fafafa;
   --color-avatar-border: #fafafa;
+  --color-divide: #e5e7eb;
   --toc-level-2: #383838;
   --toc-level-3: #666;
   --toc-level-4: #888;
